[tool.poetry]
name = "youtube"
version = "0.1.0"
description = ""
authors = ["RanamuhammadAwais <ranamawais92@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
pytest = "^8.1.1"
fastapi = "^0.110.0"
sqlmodel = "^0.0.16"
uvicorn = "^0.29.0"
psycopg2 = "^2.9.9"
pydentic = "^0.0.1.dev3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
